# mqtt_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
json/: CMakeLists.txt  json_parser.cpp
msgReceiver/: CMakeLists.txt  main.c  msgReceiver
msgReceiver/json/: json_parser.cpp
msgSender/: CMakeLists.txt  main.c  msgReciever  msgSender
